# NovaJS

./: .bazelrc  .gitignore  .npmignore  BUILD.bazel  BaseResource.ts  LICENSE  README.md  ShipResource.ts  WORKSPACE  browser.js  bundlers.bzl  cloudbuild.yaml  defaults.bzl  deploy_demo.yaml  esbuild.bzl  idSpace.js  index.html  index.js  mocha_ts_test.bzl  novaParse.js  package-lock.json  package.json  parsedObject.js  push_container.yaml  push_webtesting_image.yaml  rbush.js  rollup.config.js  rollup_browser.config.js  rollup_browser.config.ts  shipPictProxy.js  start.sh  tscc.spec.json  tsconfig.json
NovaDataInterface/: BUILD.bazel  package-lock.json
NovaDataInterface/src/: BaseData.ts  Defaults.ts  OutiftData.ts  SpaceObjectData.ts
NovaDataInterface/test/: GettableTest.ts
TestProject/: BUILD.bazel  main.ts
TestProject/src/: BUILD.bazel  thing.ts
collisions/: BUILD.bazel  hello_world_wasm_test.ts  main.rs  rollup.config.js  webpack_wasm.bzl  webpack_wasm.config.js
nova/: BUILD.bazel  index.js  server.ts
nova/Nova_Data/: README.md
nova/design/: NovaJS UML.mdj  README.md  communication.tex  display.tex  engine.tex
nova/lib/: browser.js
nova/lib/client/: acceleratable.js  beamWeapon.js  frontQuadrantTurretWeapon.js  getURL.js  inSystem.js  loadsResources.js  outfit.js  planet.js  shipyard.js  statusBar.js  turnable.js
nova/lib/parsing/: explosionParse.js  novaDataTypes.js  pictParse.js  planetParse.js
nova/lib/server/: AI.js  beamWeaponServer.js  convexHullBuilder.js  frontQuadrantTurretWeaponServer.js  projectileWeaponServer.js  turnableServer.js  turretWeaponServer.js
nova/scripts/: BUILD.bazel  controls_lint.ts
nova/settings/: BUILD.bazel  controls.json  server.json
nova/src/: BUILD.bazel  GameLoop.ts  ModLoader.ts  browser.ts  debug_settings.ts  index.html
nova/src/client/: BUILD.bazel  KeyboardController.ts  ship_controller_plugin.ts
nova/src/common/: BUILD.bazel  Controller.ts  DefaultMap.ts  FactoryQueue.ts  FactoryQueueMap.ts  GameDataPaths.ts  Queue.ts  SetUtils.ts  ShipController.ts  factory_queue.ts  factory_queue_map.ts  factory_queue_map_test.ts  factory_queue_test.ts  queue.ts
nova/src/communication/: BUILD.bazel  Channel.ts  Communicator.ts  CommunicatorClient.ts  CommunicatorMessage.ts  CommunicatorServer.ts  FilterDelta.ts  FilterState.ts  GetChanges.ts  MultiRoomCommunicator.ts  OverwriteState.ts  RpcChannel.ts  SocketChannelClient.ts  SocketChannelClient_test.ts  SocketChannelServer.ts  SocketChannelServer_test.ts  SocketCommunicationTest.ts  SocketMessage.ts  SocketRpcChannelClient.ts  multi_room_communicator.ts  multi_room_communicator_test.ts
nova/src/display/: AnimationGraphic.ts  BUILD.bazel  Display.ts  DisplayMod.ts  DisplayStateTree.ts  Drawable.ts  DrawableMap.ts  MainDrawable.ts  PersistentDrawer.ts  PersistentMultiDrawer.ts  ShipDrawable.ts  SpaceObjectDrawable.ts  SpriteSheetSprite.ts  StatusBar.ts  animation_graphic.ts  animation_graphic_plugin.ts  beam_display_plugin.ts  display_plugin.ts  (+20 more)
nova/test_keys/: BUILD.bazel  README.md  testcert.pem  testkey.pem
nova_data_interface/: Animation.ts  BUILD.bazel  BaseData.ts  BlendModes.ts  CicnData.ts  CicnImage.ts  DefaultSpriteSheetImage.ts  Defaults.ts  GameDataInterface.ts  Gettable.ts  MockGameData.ts  NovaIDs.ts  OutiftData.ts  PictData.ts  PictImage.ts  PlanetData.ts  README.md  SpaceObjectData.ts  package.json
nova_data_interface/scripts/: BUILD.bazel  pack_png.bzl
nova_ecs/: BUILD.bazel  README.md  aggregator.ts  aggregator_test.ts  arg_modifier.ts  arg_types.ts  async_provider.ts  async_provider_test.ts  async_system.ts  async_system_test.ts  bin_set.ts  bin_set_test.ts  component.ts  component_map.ts  component_map_handle.ts  entity.ts  entity_map.ts  entity_map_test.ts  event_map.ts  events.ts  filter_map_iterable.ts  first_available.ts  first_available_test.ts  make_commands.ts  modifier.ts  mutable_immutable_map_handle.ts  optional.ts  package.json  plugin.ts  provide_arg.ts  provide_async.ts  provide_async_test.ts  provide_test.ts  provider.ts  provider_test.ts  query.ts  query_cache.ts  query_cache_test.ts  query_test.ts  recursive_partial.ts  (+9 more)
nova_ecs/datatypes/: BUILD.bazel  angle.ts  map.ts  map_test.ts  mod.ts  position.ts  position_test.ts  set.ts  set_test.ts  vector.ts  vector_test.ts
nova_ecs/demo/: BUILD.bazel  demo.ts  index.html  index.ts
nova_ecs/plugins/: BUILD.bazel  copy_change_detector.ts  copy_change_detector_test.ts  delta.ts  delta_plugin.ts  delta_plugin_test.ts  iter_maps.ts  keyboard_plugin.ts  mock_communicator.ts  movement_plugin.ts  movement_plugin_test.ts  multiplayer_plugin.ts  multiplayer_plugin_test.ts  serializer_plugin.ts  serializer_plugin_test.ts  time_plugin.ts  time_plugin_test.ts
nova_parse/: .npmignore  BUILD.bazel  NovaParse.ts  README.md
nova_parse/src/: BUILD.bazel  CachelessGettable.ts  IDSpaceHandler.ts
nova_parse/test/: BUILD.bazel  NovaParse_test.ts  readNovaFile_test.ts
novadatainterface/: Animation.ts  BUILD.bazel  CicnImage.ts  DefaultSpriteSheetImage.ts  Defaults.ts  ExplosionData.ts  GameDataInterface.ts  Gettable.ts  Gettable_test.ts  MockGameData.ts  NovaDataInterface.ts  NovaIDs.ts  PictImage.ts  PictImage_test.ts  PlanetData.ts  README.md  ShipData.ts  SoundFile.ts  SpaceObjectData.ts  SpriteSheetData.ts  StatusBarData.ts  SystemData.ts  TargetCornersData.ts  WeaponData.ts  package.json
novadatainterface/scripts/: BUILD.bazel  pack_png.bzl  pack_png.ts
novadatainterface/test/: BUILD.bazel  GettableTest.ts  Gettable_test.ts
novajs/: BUILD.bazel  jsonSpriteSheetMaker.py  server.ts
novajs/src/: BUILD.bazel  browser.ts  server.ts
novaparse/: BUILD.bazel  NovaParse.ts  README.md
novaparse/src/: BUILD.bazel  CachelessGettable.ts  IDSpaceHandler.ts  readNovaFile.ts
novaparse/test/: BUILD.bazel  IDSpaceHandlerTest.ts  IDSpaceHandler_test.ts  NovaParseTest.ts  NovaParse_test.ts  convexHull.ts  readNovaFileTest.ts  readNovaFile_test.ts  testSpriteSheet.json
resource_fork/: BUILD.bazel  README.md  index.ts  resource_fork_test.ts  struct.ts  struct_test.ts  test.ndat  test.rez
(+985 files in other folders)
