package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit", "container_run_and_commit_layer")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")


exports_files([
    "tsconfig.json",
    "rollup.config.js",
    "rollup_browser.config.ts",
    ".gitignore"], visibility = ["//:__subpackages__"])

# TODO: Remove
# container_image(
#     name = "bazel_webtesting_image",
#     base = "@bazel_image//image",
#     cmd = [
#         "apt update",
#         "apt install libcups2 libdbus-glib2.0-cil libxrandr2 libxcursor1 libxinerama1 libcairo2 libcairo-gobject2 libpango-1.0-0 libxss1",
#     ]
# )

# Remove `bazel` as the entry point so shell commands can be run.
container_image(
    name = "bazel_base",
    base = "@bazel_image//image",
    cmd = "",
    entrypoint = "",
)

# As far as I can tell, this mode of installing packages
# forces you to push a '.tar' instead of layers.
# download_pkgs(
#     name = "chrome_pkgs",
#     image_tar = ":bazel_base.tar",
#     packages = [
#         "unzip",
#         "libnss3",
#         "libxss1",
#     ],
# )

install_pkgs(
    name = "chrome_pkgs_image",
    image_tar = ":bazel_base.tar",
    installables_tar = ":chrome_pkgs.tar",
    installation_cleanup_commands = "rm -rf /var/lib/apt/lists/*",
    output_image_name = "chrome_pkgs_image",
)


container_run_and_commit_layer(
    name = "bazel_webtesting_layer",
    commands = [
        "apt update",
        "apt install -y unzip libnss3 libxss1",
    ],
    # docker_run_flags = [
    #     "--entrypoint",
    #     "/bin/bash",
    # ],
    image = ":bazel_base.tar",
    #image = "@bazel_image//image",
)

container_image(
    name = "bazel_webtesting_image",
    base = "@bazel_image//image",
    layers = [
        ":bazel_webtesting_layer",
    ],
    entrypoint = "bazel",
    #base = "chrome_pkgs_image",
)

container_push(
    name = "push_bazel_webtesting_image",
    image = ":bazel_webtesting_image",
    format = "Docker",
    registry = "gcr.io",
    repository = "novajs-303605/bazel_webtesting",
    tag = "latest",
)
