package(default_visibility = ["//:__subpackages__"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit", "container_run_and_commit_layer")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")


exports_files([
    "tsconfig.json",
    "rollup.config.js",
    "rollup_browser.config.ts",
    ".gitignore"], visibility = ["//:__subpackages__"])

# Remove `bazel` as the entry point so shell commands can be run.
container_image(
    name = "bazel_base",
    base = "@bazel_image//image",
    cmd = "",
    entrypoint = "",
)

container_run_and_commit_layer(
    name = "bazel_webtesting_layer",
    commands = [
        "apt update",
        "apt install -y unzip libnss3 libxss1 libatk-bridge2.0-0 libgtk-3-0",
    ],
    image = ":bazel_base.tar",
)

container_image(
    name = "bazel_webtesting_image",
    base = "@bazel_image//image",
    layers = [
        ":bazel_webtesting_layer",
    ],
)

container_push(
    name = "push_bazel_webtesting_image",
    image = ":bazel_webtesting_image",
    format = "Docker",
    registry = "gcr.io",
    repository = "novajs-303605/bazel_webtesting",
    tag = "latest",
)
