package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@novajs//:mocha_ts_test.bzl", "mocha_ts_test")

ts_library(
    name = "novadatainterface",
    srcs = glob(["src/*.ts"]),
    module_name = "novadatainterface", # for npm
    deps = [
#        "@npm//pngjs",
        "@npm//@types/node",
    ],
)


mocha_ts_test(
    name = "novadatainterface_test",
    srcs = glob(["test/*.ts"]),
    deps = [
        ":novadatainterface",
    ]

    #args = [package_name() + x for x in glob(["test/*.ts"])],
    #args = glob(["test/*.ts"]),
    #    data = [":novadatainterface"],
    # data = glob(["test/*.ts"]),
    # deps = [
    #     ":novadatainterface",
    #     "@npm//karma"
    # ],
)

#jasmine_node_test(
#karma_web_test(
# ts_web_test(
#     name = "novadatainterface_test",
#     srcs = glob(["test/*.ts"]),
#     deps = [
#         ":novadatainterface",
#         "@npm//karma"
#     ],
# )

