load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@rules_rust//rust:rust.bzl", "rust_binary")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//:esbuild.bzl", "esbuild")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//collisions:webpack_wasm.bzl", "webpack_wasm")
load("//webtesting:web_test.bzl", "web_test")


package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world_wasm",
    srcs = ["main.rs"],
    edition = "2018",
    deps = [
        "@rules_rust//wasm_bindgen/raze:wasm_bindgen",
    ],
)

rust_wasm_bindgen(
    name = "hello_world_wasm_bindgen",
    wasm_file = ":hello_world_wasm",
)

js_library(
    name = "collisions_library",
    package_name = "collisions",
    deps = [":hello_world_wasm_bindgen"],
)

ts_library(
    name = "hello_world_wasm_test_lib",
    srcs = [
        "hello_world_wasm_test.ts"
    ],
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        #":hello_world_wasm_bindgen",
        ":collisions_library",
    ]
)

filegroup(
    name = "hello_world_wasm_file",
    srcs = [
        ":hello_world_wasm_bindgen_bg.wasm",
    ]
)

webpack_wasm(
    name = "hello_world_wasm_test_bundle",
    entry_point = "hello_world_wasm_test.js",
    deps = [
        ":hello_world_wasm_test_lib",
        ":collisions_library",
        ":hello_world_wasm_bindgen",
        ":hello_world_wasm_file",
    ]
)

# rollup_bundle(
#     name = "hello_world_wasm_test_bundle",
#     deps = [
#         ":hello_world_wasm_test_lib",
#         ":collisions_library",
#         ":hello_world_wasm_bindgen",
#         ":hello_world_wasm_file",
#         "@npm//@rollup/plugin-wasm",
#         "@npm//@rollup/plugin-node-resolve",
#         "@npm//@rollup/plugin-commonjs",
#     ],
#     entry_point = "hello_world_wasm_test.ts",
#     config_file = "rollup.config.js",
#     sourcemap = "inline",
#     format = "iife",
# )

# esbuild(
#     name = "hello_world_wasm_test_bundle",
#     entry_point = "hello_world_wasm_test.ts",
#     platform = "node",
#     deps = [
#         ":hello_world_wasm_test_lib",
#     ]
# )

nodejs_binary(
    name = "hello_world_wasm_bin",
    entry_point = "hello_world_wasm_test_bundle.js",
    data = [
        ":hello_world_wasm_test_bundle",
    ],
)

jasmine_node_test(
    name = "hello_world_wasm_test",
    srcs = [
        ":hello_world_wasm_test_bundle",
    ]
)

web_test(
    name = "hello_world_wasm_test_browser",
    srcs = [
        ":hello_world_wasm_test_bundle",
        #":collisions_library",
    ],
    static_files = [
        # Serve sourcemaps
        ":hello_world_wasm_file",
        ":hello_world_wasm_test_bundle",
    ],
)
