package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("//nova_data_interface/scripts:pack_png.bzl", "pack_png")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

pack_png(
    name = "default_pict",
    src = "default_pict.png",
)

pack_png(
    name = "default_rled",
    src = "default_rled.png",
)

ts_library(
    name = "nova_data_interface",
    srcs = glob(
        ["*.ts"],
        exclude = ["*_test.ts"],
    ) + [
        ":default_pict",
        ":default_rled",
    ],
    module_name = "nova_data_interface",
    deps = [
        "@npm//@types/node",
    ],
)

ts_library(
    name = "nova_data_interface_test_lib",
    testonly = True,
    srcs = glob(["*_test.ts"]),
    deps = [
        ":nova_data_interface",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//jasmine",
    ],
)

jasmine_node_test(
    name = "nova_data_interface_test",
    srcs = [":nova_data_interface_test_lib"],
)

pkg_npm(
    name = "nova_data_interface_pkg",
    package_name = "nova_data_interface",
    srcs = ["package.json"],
    deps = [
        ":nova_data_interface",
        "//:.gitignore",
    ],
)
