package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

ts_library(
    name = "ecs",
    module_name = "nova_ecs",
    srcs = [
        "entity.ts",
        "component.ts",
        "system.ts",
        "query.ts",
        "resource.ts",
        "world.ts",
        "utils.ts",
        "plugin.ts",
        "arg_types.ts",
        "async_system.ts",
        "component_map.ts",
        "entity_map.ts",
        "resource_map.ts",
        "mutable_immutable_map_handle.ts",
    ],
    deps = [
        "@npm//io-ts",
        "@npm//fp-ts",
        "@npm//immer",
    ]
)

ts_library(
    name = "ecs_test_lib",
    testonly = True,
    srcs = [
        "system_test.ts",
        "world_test.ts",
        "utils_test.ts",
        "async_system_test.ts",
    ],
    deps = [
        ":ecs",
        "//nova_ecs/datatypes",
        "@npm//@types/jasmine",
        "@npm//io-ts",
        "@npm//immer",
        "@npm//uuid",
        "@npm//@types/uuid",
    ]
)

jasmine_node_test(
    name = "ecs_test",
    srcs = [
        ":ecs_test_lib",
    ],
)

pkg_npm(
    name = "ecs_pkg",
    srcs = ["package.json"],
    deps = [
        ":ecs",
    ],
    nested_packages = [
        "//nova_ecs/datatypes:datatypes_pkg",
        "//nova_ecs/plugins:plugins_pkg",
    ]
)
