package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

ts_library(
    name = "ecs",
    srcs = [
        "arg_modifier.ts",
        "arg_types.ts",
        "async_system.ts",
        "component.ts",
        "component_map.ts",
        "entity.ts",
        "entity_map.ts",
        "event_map.ts",
        "events.ts",
        "first_available.ts",
        "mutable_immutable_map_handle.ts",
        "optional.ts",
        "plugin.ts",
        "provide_arg.ts",
        "provider.ts",
        "query.ts",
        "query_cache.ts",
        "resource.ts",
        "resource_map.ts",
        "system.ts",
        "utils.ts",
        "without.ts",
        "world.ts",
        "bin_set.ts",
    ],
    module_name = "nova_ecs",
    deps = [
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//fp-ts",
        "@npm//immer",
        "@npm//io-ts",
        "@npm//rxjs",
    ],
)

ts_library(
    name = "ecs_test_lib",
    testonly = True,
    srcs = [
        "async_system_test.ts",
        "entity_map_test.ts",
        "first_available_test.ts",
        "provider_test.ts",
        "query_cache_test.ts",
        "query_test.ts",
        "system_test.ts",
        "utils_test.ts",
        "world_test.ts",
        "bin_set_test.ts",
    ],
    deps = [
        ":ecs",
        "//nova_ecs/datatypes",
        "//novadatainterface",
        "@npm//@types/jasmine",
        "@npm//@types/uuid",
        "@npm//fp-ts",
        "@npm//immer",
        "@npm//io-ts",
        "@npm//uuid",
    ],
)

jasmine_node_test(
    name = "ecs_test",
    srcs = [
        ":ecs_test_lib",
    ],
)

filegroup(
    name = "ecs_es6",
    srcs = [":ecs"],
    output_group = "es6_sources",
)

pkg_npm(
    name = "ecs_pkg",
    package_name = "nova_ecs",
    srcs = ["package.json"],
    nested_packages = [
        "//nova_ecs/datatypes:datatypes_pkg",
        "//nova_ecs/plugins:plugins_pkg",
    ],
    deps = [
        ":ecs",
        ":ecs_es6",
    ],
)
