package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@novajs//:mocha_ts_test.bzl", "mocha_ts_test")

filegroup(
    name = "defaults",
    srcs = [
        "default.png",
        "defaultRled.png",
    ],
)

ts_library(
    name = "novadatainterface",
#    data = [":defaults"],
    srcs = glob(["*.ts"]),
#    module_name = "novadatainterface", # for npm
    deps = [
#        "@npm//pngjs",
        "@npm//@types/node",
    ],
)


mocha_ts_test(
    name = "novadatainterface_test",
    srcs = glob(["test/*.ts"]),
    deps = [
        ":novadatainterface",
        "@npm//chai",
        "@npm//chai-as-promised",
        "@npm//@types/node",
    ]
)
