package(default_visibility = ["//visibility:public"])

load("//:defaults.bzl", "ts_library")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("//novadatainterface/scripts:pack_png.bzl", "pack_png")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

pack_png(
    name = "default_pict",
    src = "default_pict.png",
)

pack_png(
    name = "default_rled",
    src = "default_rled.png",
)

ts_library(
    name = "novadatainterface",
    srcs = glob(["*.ts"], exclude=["*_test.ts"]) + [
        ":default_pict",
        ":default_rled",
    ],
    module_name = "novadatainterface",
    deps = [
        "@npm//@types/node",
    ],
)

ts_library(
    name = "novadatainterface_test_lib",
    testonly = True,
    srcs = glob(["*_test.ts"]),
    deps = [
        ":novadatainterface",
        "@npm//@types/node",
        "@npm//jasmine",
        "@npm//@types/jasmine",
    ]
)

jasmine_node_test(
    name = "novadatainterface_test",
    srcs = [":novadatainterface_test_lib"],
)

pkg_npm(
    name = "novadatainterface_pkg",
    srcs = ["package.json"],
    deps = [
        ":novadatainterface",
        "//:.gitignore",
    ],
)
