package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "server",
    srcs = ["server.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//io-ts",
        "@npm//fp-ts",
        "@npm//pixi.js",
        "@npm//@types/pixi.js",
        "@npm//socket.io",
        "@npm//@types/socket.io",
        "@npm//express",
        "@npm//@types/express",
        "//novaparse",
        "//novajs/src/common",
        "//novajs/src/engine",
        "//novajs/src/communication",
        "//novajs/src/server",
        "//novajs/src/server/parsing",
    ]
)

rollup_bundle(
    name = "server_rollup",
    deps = [
        ":server",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//rollup-plugin-sourcemaps",
        "@npm//@rollup/plugin-json",
    ],
    entry_point = "server.ts",
    config_file = "//:rollup.config.js",
    format = "cjs",
)

nodejs_binary(
    name = "novajs",
    entry_point = "server_rollup.js",
    data = [":server_rollup"],
)



