package(default_visibility = ["//visibility:public"])


load("@npm_bazel_typescript//:index.bzl", "ts_library")


ts_library(
    name = "novaparse",
    srcs = ["NovaParse.ts"],
#    module_name = "novaparse",
    deps = [
        "@npm//@types/node",
        "@npm//resourceforkjs",
        "//novadatainterface",
        "//novaparse/src/resource_parsers",
        "//novaparse/src:novaparse_libraries",
        "//novaparse/src/parsers",
    ]
)
