package(default_visibility = ["//visibility:public"])


load("//:defaults.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

ts_library(
    name = "novaparse",
    srcs = ["NovaParse.ts"],
    module_name = "novaparse",
    deps = [
        "@npm//@types/node",
        "@npm//resourceforkjs",
        "//novadatainterface",
        "//novaparse/src/resource_parsers",
        "//novaparse/src:novaparse_libraries",
        "//novaparse/src/parsers",
    ]
)
