package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "testproject",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//pngjs",
        "@npm//@types/pngjs",
        "//novadatainterface",
        "@npm//resourceforkjs",
    ],
)


