package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//:defaults.bzl", "ts_library")
load("//:esbuild.bzl", "esbuild")


filegroup(
    name = "static_files",
    srcs = [
        "index.html",
    ],
)

ts_library(
    name = "debug_settings_lib",
    srcs = ["debug_settings.ts"],
    deps = [
        "//nova_ecs:ecs",
        "//nova/src/display",
    ]
)

ts_library(
    name = "browser_lib",
    srcs = ["browser.ts"],
    deps = [
        #":gameloop_lib",
        ":debug_settings_lib",
        "//nova/src/common",
        #"//nova/src/client",
        "//nova/src/display",
        #"//nova/src/engine",
        #"//nova/src/engine:utils",
        "//nova_ecs:ecs",
        "//nova_ecs/plugins",
        "//nova/src/nova_plugin",
        "//nova/src/communication:communication_client_lib",
        "//nova/src/client/gamedata",
        "@npm//uuid",
        "@npm//@types/uuid",
        "@npm//stats.js",
        "@npm//@types/stats.js",
        "@npm//@types/node",
        "@npm//pixi.js",
        "@npm//rxjs",
    ]
)

# rollup_bundle(
#     name = "browser_bundle",
#     sourcemap = "true",
#     entry_point = "browser.ts",
#     config_file = "@//:rollup.config.js",
#     format = "iife",
#     deps = [
#         ":browser_lib",
#         "@npm//url-shim",
#         "@npm//@rollup/plugin-alias",
#         "@npm//@rollup/plugin-node-resolve",
#         "@npm//@rollup/plugin-commonjs",
#         "@npm//rollup-plugin-sourcemaps",
#     ]
# )

esbuild(
    name = "browser_bundle",
    args = [
        "--keep-names",
        "--resolve-extensions=.mjs,.js",
    ],
    entry_point = "browser.ts",
    #target = "es2015",
    target = "esnext",
    minify = True,
    sources_content = True,
    define = [
        "process.env.NODE_ENV=\"browser\""
    ],
    #link_workspace_root = True,
    deps = [
        ":browser_lib",
    ],
)
